# equium

./: .gitignore  Cargo.toml  Dockerfile  package.json
.github/workflows/: desktop-build.yml
clients/cli-miner/: Cargo.toml
clients/cli-miner/src/: main.rs
clients/desktop-miner/: README.md  index.html  package.json  vite.config.ts
clients/desktop-miner/src/: App.tsx  styles.css
clients/desktop-miner/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop-miner/src-tauri/capabilities/: default.json
clients/desktop-miner/src-tauri/src/: keystore.rs  lib.rs  main.rs  miner.rs  sender.rs  settings.rs  state.rs
clients/desktop-miner/src/components/: MineDashboard.tsx  SendModal.tsx  SettingsModal.tsx  SetupWizard.tsx  TopBar.tsx  UnlockScreen.tsx
clients/desktop-miner/src/lib/: api.ts  clipboard.ts  format.ts
clients/gpu-miner/: Cargo.toml  README.md
clients/gpu-miner/src/: gpu.rs  main.rs  shader_ref.rs  wagner.rs
clients/gpu-miner/src/shaders/: leaves.wgsl  rounds.wgsl
clients/web-miner/wasm/: Cargo.toml
clients/web-miner/wasm/.cargo/: config.toml
clients/web-miner/wasm/src/: lib.rs
clients/website/: package-lock.json  package.json  tsconfig.json  vercel.json
clients/website/public/wasm/: equium_wasm.d.ts  equium_wasm.js  equium_wasm_bg.wasm  miner.worker.js
clients/website/src/: idl.json
clients/website/src/app/: layout.tsx  opengraph-image.tsx
clients/website/src/app/api/blocks/: route.ts
clients/website/src/app/api/cron/refresh/: route.ts
clients/website/src/app/api/rpc/: route.ts
clients/website/src/app/api/state/: route.ts
clients/website/src/app/docs/: page.tsx
clients/website/src/app/docs/getting-started/: page.tsx
clients/website/src/app/docs/protocol/: page.tsx
clients/website/src/app/docs/rpc/: page.tsx
clients/website/src/app/docs/tokenomics/: page.tsx
clients/website/src/app/download/: page.tsx
clients/website/src/app/explorer/: opengraph-image.tsx  page.tsx
clients/website/src/app/mine/: opengraph-image.tsx
clients/website/src/components/: DownloadButtons.tsx  ExplorerDashboard.tsx  Faq.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  MineDashboard.tsx  MinePlaceholder.tsx  MiningPreview.tsx  Navbar.tsx  PreLaunchPanel.tsx  ReferralBanner.tsx  ReferralButton.tsx  RpcGate.tsx  ShareCardModal.tsx
clients/website/src/components/wallet/: SetupWizard.tsx
clients/website/src/lib/: cache.ts  miner-engine.ts  program.ts  rpc.ts  wallet-context.tsx  webgpu-leaves.ts  webgpu-wagner.ts
crates/equihash-core/src/: solver.rs
programs/equium/src/: lib.rs  pow.rs
programs/equium/src/instructions/: mod.rs
scripts/: README.md  indexer.service  indexer.ts  inspect-index.ts
