[workspace]
resolver = "2"
members = [
    "programs/equium",
    "crates/equihash-core",
    "scripts/verify-bench/programs/verify-bench",
    "clients/cli-miner",
    "clients/gpu-miner",
    "clients/web-miner/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Equium contributors"]
repository = "https://github.com/equium/equium"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1"
equihash = { version = "0.3", default-features = false }
blake2b_simd = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
