[package]
name = "equium-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM-bindgen wrapper around equihash-core's solver for the browser miner"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
equihash-core = { path = "../../../crates/equihash-core", features = ["solver"] }
# Same upstream verifier the on-chain program uses — needed by
# validate_gpu_solution for the v0.4 full-GPU defense-in-depth check.
equihash = { workspace = true }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
